--- a/dawbase/css/contacto.css
+++ b/dawbase/css/contacto.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
@@ -44,4 +44,4 @@ input, textarea, button{
 
 .whtpp:hover{
     background-color: rgb(252, 241, 198);;
-}
+} */
