--- a/dawbase/css/style.css
+++ b/dawbase/css/style.css
@@ -6,8 +6,193 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
 
+body {
+  padding: 0;
+}
+
+.main {
+  margin-bottom: 50px;
+}
 
 .section__img {
   box-shadow: 4px -4px white, 
   5px -5px 0px 5px #FF5353;
+}
+
+.footer {
+  color: white;
+  font-weight: 500;
+  background-color: #FF5353;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 30px;
+  margin-top: 200px;
+}
+
+.footer__links {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.footer__picture {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 20%;
+  height: 40px;
+}
+
+.footer__class {
+  width: 100%;
+}
+
+.footer__image {
+  display: block;
+  width: 60%;
+  height: 100%;
+  object-fit:contain;
+}
+
+.slider__container {
+  padding: 2rem;
+}
+
+.slider {
+  display: flex;
+	aspect-ratio: 16 / 9;
+	overflow-x: auto;
+	scroll-snap-type: x mandatory;
+	scroll-behavior: smooth;
+	box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+	border-radius: 0.5rem;
+	-ms-overflow-style: none; /* Hide scrollbar IE and Edge */
+	scrollbar-width: none; /* Hide scrollbar Firefox */
+}
+
+.slider__wrapper {
+  position: relative;
+	max-width: 48rem;
+	margin: 0 auto;
+}
+
+.slider img {
+  flex: 1 0 100%;
+  scroll-snap-align: start;
+  object-fit: cover;
+}
+
+.slider::-webkit-scrollbar {
+	display: none;
+}
+
+.slider__nav {
+  display: flex;
+  column-gap: 1rem;
+  position: absolute;
+  bottom: 1.25rem;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
+
+.slider__nav a {
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 0.75;
+  transition: opacity ease 250ms;
+}
+
+.slider__nav a:hover {
+  opacity: 1;
+}
+
+.slider__title {
+
+} 
+
+@media (min-width: 1032px) {
+  .footer__picture {
+    width: 30%;
+  }
+}
+
+@media (max-width: 768px) {
+
+  body {
+    padding: 0;
+  }
+  
+  .footer__picture {
+    width: 50%;
+  }
+
+  .main__article {
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .main__section__title {
+    font-size: 40px;
+  }
+
+  .main__section__subtitle, 
+  .slider__title {
+    font-size: 25px;
+    margin-bottom: 10px;
+  }
+
+  .main__section {
+    width: 100%;
+    padding: 0;
+  }
+
+  .main__section__picture {
+    width: 100%;
+    height: 300px;
+    margin-bottom: 50px;
+  }
+
+  .section__img {
+    border-radius: 9999px;
+    width: 50%;
+  }
+  .footer {
+    margin-top: 50px;
+  }
+}
+
+@media (max-width: 360px) {
+
+  body {
+    padding: 0;
+  }
+
+  .section__img {
+    border-radius: 9999px;
+    width: 80%;
+  }
+
+  .main__section__picture {
+    margin-top: 50px;
+  }
+
+  .footer {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    gap: 16px;
+    overflow: hidden;
+    padding: 30px;
+    height: fit-content;
+  }
+
+  .footer__picture {
+    width: 100%;
+  }
+
 }
