--- a/dawbase/css/contacto.css
+++ b/dawbase/css/contacto.css
@@ -63,8 +63,49 @@
     padding: 15px 30px;
 }
 
+.main__others {
+    /* background-color: black; */
+    margin-top: 3rem;
+    text-align: center;
+}
 
-@media (max-width: 768px){
+
+.main__item {
+    font-size: 1.2rem;
+}
+
+.icons {
+    margin-top: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: fit-content;
+    /* gap: 1rem; */
+}
+
+.icon__item {
+    width: 5%;
+    height: 40px;
+}
+
+.icon__image {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.main__social__medias {
+    margin-top: 1rem;
+}
+
+
+@media (max-width: 820px){
+
+    .icon__item {
+        width: 15%;
+        height: 40px;
+    }
 
     .main__picture {
         margin-top: 30px;
