--- a/dawbase/css/style.css
+++ b/dawbase/css/style.css
@@ -21,6 +21,11 @@ body {
   margin-bottom: 50px;
 }
 
+.main__section__title {
+  font-size: 2rem;
+  font-weight: 600;
+}
+
 .header {
   background-image: linear-gradient(to top, #ffcacc 0%, #ffe2f6 99%, #fecfef 100%);
   background-repeat: no-repeat;
@@ -41,6 +46,8 @@ body {
 }
 
 .footer {
+  position: relative;
+  bottom: 40px;
   color: white;
   font-weight: 500;
   background-color: #FF5353;
