Se agrego el commit de los clientes y modificacion en el diseño responsive de los clientes

--- a/dawbase/css/about.css
+++ b/dawbase/css/about.css
@@ -9,3 +9,11 @@
   font-size: 2rem;
   font-weight: 600;
 }
+
+@media (max-width: 768px){
+    .main {
+        padding: 30px;
+        width: 100%;
+        margin: 0 auto;
+    }
+}
